# prompt-prix

./: .dockerignore  .env.example  .gitignore  Dockerfile  ISSUES.md  LICENSE  PLAN.md  README.md  app.py  docker-compose.yml  fix_corruption.py  old_lmstudio.py  pyproject.toml  requirements.txt  run.sh  tool_competence_tests_bfcl.jsonl
.claude/: CHANGE_MANAGEMENT.md  CLAUDE.md  GIT_SAFETY.md  TESTING.md
docs/: ARCHITECTURE.md  DESIGN.md  EXTENDING.md  MCP_TOOLS.md  README.md  TEST_SUMMARY.md
docs/adapters/: LMSTUDIO.md
docs/adr/: 001-use-existing-benchmarks.md  002-fan-out-pattern-as-core.md  004-compare-to-battery-export.md  (+30 more)
examples/: README.md  compliance_decay_analysis.md  compliance_decay_variants.json  file_categorization_drift_tests.json  file_categorization_eval.yaml  judge_competence_tests.promptfoo.yaml  judge_eval_benchmark.yaml  judge_eval_benchmark_results_1768258724.json  judge_eval_ground_truth.json  react_file_categorization_benchmark.json  tool_competence_tests.json  tool_competence_tests.promptfoo.yaml  tool_competence_tests_results.csv  tool_competence_tests_results.json
notebooks/: embedding_distance_analysis.ipynb
prompt_prix/: __init__.py  __main__.py  battery.py  cli.py  config.py  consistency.py  core.py  dispatcher.py  executor.py  export.py  fara_service.py  handlers.py  llm_judge.py  main.py  parsers.py  promptfoo.py  react_mixin.py  scheduler.py  semantic_validator.py  server_affinity.py  state.py  system_prompt.txt  tool_parsers.py  ui.py  ui_helpers.py
research_log/: 2025-01-12_prompt_geometry.md
scripts/: analyze_architecture.py  docker-test.sh  run_battery.py  summarize_tests.py
tests/: __init__.py  conftest.py  sc_mock.py  test_architecture.py  test_battery.py  test_cli.py  test_composite_adapter.py  test_config.py  test_consistency_display.py  test_core.py  test_drift.py  test_executor.py  test_export.py  test_gemini_adapter.py  test_geometry.py  test_gpu1_routing.py  test_huggingface_adapter.py  test_integration.py  test_lmstudio_adapter.py  test_main.py  test_mcp_complete.py  test_mcp_judge.py  test_mcp_list_models.py  test_mcp_server.py  test_mcp_tools.py  test_parsers.py  test_pooled_local_adapter.py  test_promptfoo.py  test_react.py  test_react_dispatch.py  test_react_execute.py  test_react_runner.py  test_react_step.py  test_semantic_validator.py  test_server_affinity.py  test_together_adapter.py  test_tool_parsers.py  test_trajectory.py  test_ui_helpers.py
(+68 files in other folders)
